2010-01-14  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.

        Drag and Drop source/destination code needs cleanup.
        <https://bugs.webkit.org/show_bug.cgi?id=33691>.
        
        Update to new way of calling sourceOperation.

        * src/DragClientImpl.cpp:
        (WebKit::DragClientImpl::startDrag):

2010-01-14  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        Remove references to V8DOMWrapper::convertToNative*().

        https://bugs.webkit.org/show_bug.cgi?id=33677

        * src/WebBindings.cpp:
        (WebKit::getDragDataImpl):
        (WebKit::getRangeImpl):

2010-01-14  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Fisher.

        Introduce WebFileChooserParams to convey parameters for
        WebViewClient::runFileChooser(), and add new parameters to it.
        https://bugs.webkit.org/show_bug.cgi?id=32473

        The new parameters are
         - selected file names
         - "accept" attribute value

        * WebKit.gyp: Add WebFileChooserParams.h
        * public/WebFileChooserParams.h: Added.
        * public/WebViewClient.h:
        (WebKit::WebViewClient::runFileChooser):
          Add runFileChooser() with WebFileChooserParams, and mark the old one deprecated.
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::runOpenPanel):
          Call the new runFileChooser() first, then call the old
          runFileChooser() if the new one failed.

2010-01-13  Kenneth Russell  <kbr@google.com>

        Reviewed by Oliver Hunt.

        Need to implement WebGLContextAttributes
        https://bugs.webkit.org/show_bug.cgi?id=31169

        Added the WebGLContextAttributes class and custom JavaScript
        bindings to accept a native object as the second argument to
        getContext("experimental-webgl") per the WebGL specification.
        Added GraphicsContext3D::Attributes struct to isolate DOM and