@@ -55,6 +55,8 @@ public:
         return *this;
     }
 
+    WEBKIT_API static WebSecurityOrigin* createFromDatabaseIdentifier(const WebString& databaseIdentifier);
+
     WEBKIT_API void reset();
     WEBKIT_API void assign(const WebSecurityOrigin&);
 
